--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum,
                 pariatur.
             </p>
+            <button>Subscribe</button>
         </div>
         <script src="/script.js"></script>
     </body>
