--- a/07_projects/1_colorChange/index.html
+++ b/07_projects/1_colorChange/index.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         <div class="canvas">
+            <h1>Practise the Color Change Project</h1>
             <span class="button" id="grey"></span
             ><span class="button" id="pink"></span
             ><span class="button" id="green"></span
